; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs3xdr.c_nfs3svc_release_fhandle2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs3xdr.c_nfs3svc_release_fhandle2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_rqst = type { i32 }
%struct.nfsd3_fhandle_pair = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs3svc_release_fhandle2(%struct.svc_rqst* %0, i32* %1, %struct.nfsd3_fhandle_pair* %2) #0 {
  %4 = alloca %struct.svc_rqst*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.nfsd3_fhandle_pair*, align 8
  store %struct.svc_rqst* %0, %struct.svc_rqst** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.nfsd3_fhandle_pair* %2, %struct.nfsd3_fhandle_pair** %6, align 8
  %7 = load %struct.nfsd3_fhandle_pair*, %struct.nfsd3_fhandle_pair** %6, align 8
  %8 = getelementptr inbounds %struct.nfsd3_fhandle_pair, %struct.nfsd3_fhandle_pair* %7, i32 0, i32 1
  %9 = call i32 @fh_put(i32* %8)
  %10 = load %struct.nfsd3_fhandle_pair*, %struct.nfsd3_fhandle_pair** %6, align 8
  %11 = getelementptr inbounds %struct.nfsd3_fhandle_pair, %struct.nfsd3_fhandle_pair* %10, i32 0, i32 0
  %12 = call i32 @fh_put(i32* %11)
  ret i32 1
}

declare dso_local i32 @fh_put(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
